# aint

data/: ice_cream_linear.txt
src/: autograd.py  expert_animal.py  grad_3d.py  heart_disease_overfit.py  image_gradient.py  mc_nemar.py  mnist_nn.py  nextword_nn.py  nn_matrix_multi.py  nn_travel_decision.py  ollama00.py  regression_bikes.py  regression_grad.py  regression_rand.py  softmax.py  travel_decision.py  tsp_cost.py
src/aiact/: TODO.txt  pyproject.toml  run.py
src/aiact/data/: questions.yaml
src/aiact/src/aiact/: cli.py  engine.py  formatter.py  fuzzy.py  models.py  questionnaire.py
src/aiact/src/aiact/rules/: default.clp  high_risk.clp  limited_risk.clp  templates.clp  unacceptable.clp
src/aiact/tests/: conftest.py  test_engine.py  test_fuzzy.py  test_questionnaire.py
src/aiact/tests/fixtures/: chatbot_spam_filter.yaml  job_screening.yaml  social_scoring.yaml  spam_filter.yaml
src/data/: animal_ds.txt
text/: book.tex  codex-log.txt
